packages/f-syntax/test/corpus/patterns.txt
============
Name pattern
============

let x = 1

---

(source_file
  (var_declaration
    (name_pattern
      (identifier))
    (number)))

============================
Tuple pattern with 1 element
============================

let (x) = 1

---

(source_file
  (var_declaration
    (tuple_pattern
      (name_pattern
        (identifier)))
    (number)))

=============================
Tuple pattern with 2 elements
=============================

let (x, y) = point

---

(source_file
  (var_declaration
    (tuple_pattern
      (name_pattern
        (identifier))
      (name_pattern
        (identifier)))
    (identifier)))

=============================
Tuple pattern with 3 elements
=============================

let (x, y, z) = point

---

(source_file
  (var_declaration
    (tuple_pattern
      (name_pattern
        (identifier))
      (name_pattern
        (identifier))
      (name_pattern
        (identifier)))
    (identifier)))
